--- a/src/index.njk
+++ b/src/index.njk
@@ -134,12 +134,12 @@ layout: 'base.njk'
       </ul>  
   </div>
 </section>
-<section>
+<section class="guest-contact-section bg-lazy-image">
   <div class="guest-contact">
     <h2>Be a Guest on the Podcast!</h2>
     <p>Do you have a story of God’s grace to share? Are you passionate about faith-filled living, relationships, personal growth, or Catholic life? I’d love to hear from you!</p>
 
-  <div class="form-container">
+    <div class="form-container">
     <form>
       <div class="form-group">
           <div>
@@ -200,7 +200,6 @@ layout: 'base.njk'
         </div>
       </div>
     </form>
-  </div>
   </div>
 </section>
 <section class="pb-0">
