--- a/src/index.njk
+++ b/src/index.njk
@@ -16,7 +16,7 @@ layout: 'base.njk'
 </section>
 <section>
   <div class="episode-feature">
-    <img src="https://fakeimg.pl/400x400" alt="Intro Episode Image">
+    <img src="/assets/episodes/EverythingIsGrace_PodcastCover_ForWeb.jpg" alt="Intro Episode Image">
       <div class="episode-feature__text">
         <div class="episode-feature__heading">
           <h2>Intro Episode: Welcome to the Everything is Grace Podcast!</h2>
@@ -31,10 +31,11 @@ layout: 'base.njk'
         </div>
     </div>
     <div class="podcast-description">
-      <h2>A Compelling Elevator Pitch for the Podcast</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <h2>Finding grace in every season and aspect of life</h2>
+      <p>Life can be so many things at once - busy, exciting, stressful, joy filled, sad, and even shocking - but through it all God’s grace is always present. <em>Everything is Grace</em> is a podcast dedicated to helping you see God’s hand in your everyday moments and encounters —whether in the joys, the struggles, or the quiet in-between. </p>
+      
+      <p>From deep conversations on faith, relationships, and personal growth to reflections on culture, entertainment, and the ways God moves in the world around us, this podcast invites you to approach life with a heart open to seeing grace in everything.</p>
+      <p><b>Join me as we embrace the beauty of life’s sacred moments with faith, intention, and curiosity.</b></p>
       <div class="podcast-icons">
         <h3>Tune In</h3>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"/></svg>&nbsp; <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M319.4 372c48.5-31.3 80.6-85.9 80.6-148c0-97.2-78.8-176-176-176S48 126.8 48 224c0 62.1 32.1 116.6 80.6 148c1.2 17.3 4 38 7.2 57.1l.2 1C56 395.8 0 316.5 0 224C0 100.3 100.3 0 224 0S448 100.3 448 224c0 92.5-56 171.9-136 206.1l.2-1.1c3.1-19.2 6-39.8 7.2-57zm-2.3-38.1c-1.6-5.7-3.9-11.1-7-16.2c-5.8-9.7-13.5-17-21.9-22.4c19.5-17.6 31.8-43 31.8-71.3c0-53-43-96-96-96s-96 43-96 96c0 28.3 12.3 53.8 31.8 71.3c-8.4 5.4-16.1 12.7-21.9 22.4c-3.1 5.1-5.4 10.5-7 16.2C99.8 307.5 80 268 80 224c0-79.5 64.5-144 144-144s144 64.5 144 144c0 44-19.8 83.5-50.9 109.9zM224 312c32.9 0 64 8.6 64 43.8c0 33-12.9 104.1-20.6 132.9c-5.1 19-24.5 23.4-43.4 23.4s-38.2-4.4-43.4-23.4c-7.8-28.5-20.6-99.7-20.6-132.8c0-35.1 31.1-43.8 64-43.8zm0-144a56 56 0 1 1 0 112 56 56 0 1 1 0-112z"/></svg>     
@@ -44,7 +45,7 @@ layout: 'base.njk'
 <section class="bg-background-secondary-300">
   <div class="featured-episode">
     <div class="margin-block-3">
-      <h2>Check out these trending episodes to get started.</h2>
+      <h2>Listen to the foundational episode series first!</h2>
       {%- for episode in collections.episode -%}
         <div class="episode-list {% if loop.last %} episode-list--last{% endif %}">
           <span>{{ episode.data.episodeNumber }}</span>
@@ -91,8 +92,9 @@ layout: 'base.njk'
     <div>
       <span>MEET YOUR HOST</span>
       <h2>Kara Loryn Lilly</h2>
-      <p>You may know me as a Christain wedding and lifestyle photographer around here, now showing up with a new gadget in my hands instead of a camera - a microphone. I'm still your favorite Jesus lovin', Marvel movie bingin' , local coffee shop huntin', wife and mama!</p>
-      <p>Now you can add this to the list: your favorite Christain podcaste. I'm here to talk about how you can find grace in your every day. When going gets tough, we will see how God is with you. When things are amazing, we will explore how to praise Him. I can't wait to have you listen in!</p>
+      <p>You may know me as a Christian wedding photographer, a former health coach, a youth minister, a speaker, or maybe a worship leader. No matter how our paths have crossed, at the heart of it all, I’m a storyteller and disciple, passionate about helping others discover the meaning of the Gospel in their everyday lives.</p>
+      <p>I believe discipleship isn’t a set of rules; it’s a daily invitation to follow Christ in every season, every calling, and in the culture and environment around us. <em>Everything is Grace</em> is where all of our passions meet—a space to explore faith, purpose, relationships, and the ways God speaks through our stories and the world around us.
+</p>
       <a role="button" class="btn--secondary" href="/">Listen Now &rarr;</a>
     </div>
   </div>
@@ -138,10 +140,9 @@ layout: 'base.njk'
   <div class="guest-contact">
     <h2>Be a Guest on the Podcast!</h2>
     <p>Do you have a story of God’s grace to share? Are you passionate about faith-filled living, relationships, personal growth, or Catholic life? I’d love to hear from you!</p>
-
     <div class="form-container">
-    <form>
-      <div class="form-group">
+    <form netlify>
+      <div class="form-group" method="POST" name="contact">
           <div>
             <label for="fullName">Full Name</label>
             <input 
