Add Fathom tracking

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,9 @@
         <script src="/scripts/main.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" />
         <script src="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.js" defer></script>
-        <script defer src="https://cloud.umami.is/script.js" data-website-id="46a7ebf4-f0fb-4d77-8b55-f2e7c883fc97"></script>
+        <!-- Fathom - beautiful, simple website analytics -->
+        <script src="https://cdn.usefathom.com/script.js" data-site="FNUXSQBW" defer></script>
+        <!-- / Fathom -->
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
         <title>{{ title | default("Everything is Grace Podcast") }}</title>
         <style>{% getBundle "css" %}</style>
