--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: 'base.njk'
 ---
 
 <section class="hero">
-  <img src="/assets/matt-botsford-OKLqGsCT8qs-unsplash.jpg" alt="Hero Image" class="hero-image" loading="eager">
+  <img src="/assets/headshots/Everything-is-Grace-Podcast-Kara-Loryn-Lilly-0005.jpg" alt="Kara Lilly Podcast" class="hero-image" loading="eager">
     <div class="hero-content">
       <h1>
         everything is
@@ -31,7 +31,7 @@ layout: 'base.njk'
         </div>
     </div>
     <div class="podcast-description">
-      <h2>Finding grace in every season and aspect of life</h2>
+      <h2>See God's Hand in Every Season of Life</h2>
       <p>Life can be so many things at once - busy, exciting, stressful, joy filled, sad, and even shocking - but through it all God’s grace is always present. <em>Everything is Grace</em> is a podcast dedicated to helping you see God’s hand in your everyday moments and encounters —whether in the joys, the struggles, or the quiet in-between. </p>
       
       <p>From deep conversations on faith, relationships, and personal growth to reflections on culture, entertainment, and the ways God moves in the world around us, this podcast invites you to approach life with a heart open to seeing grace in everything.</p>
@@ -95,7 +95,7 @@ layout: 'base.njk'
       <p>You may know me as a Christian wedding photographer, a former health coach, a youth minister, a speaker, or maybe a worship leader. No matter how our paths have crossed, at the heart of it all, I’m a storyteller and disciple, passionate about helping others discover the meaning of the Gospel in their everyday lives.</p>
       <p>I believe discipleship isn’t a set of rules; it’s a daily invitation to follow Christ in every season, every calling, and in the culture and environment around us. <em>Everything is Grace</em> is where all of our passions meet—a space to explore faith, purpose, relationships, and the ways God speaks through our stories and the world around us.
 </p>
-      <a role="button" class="btn--secondary" href="/">Listen Now &rarr;</a>
+      <a role="button" class="btn--secondary" href="https://karalorynphotography.com/meet-kara">GET TO KNOW ME &rarr;</a>
     </div>
   </div>
 </section>
