--- a/src/index.njk
+++ b/src/index.njk
@@ -116,24 +116,26 @@ layout: 'base.njk'
 </section>
 <section class="px-0 open-quote">
   <div class="testimonials">
+    <div class="testimonial-slider">
       <ul class="slider">
-       <li>
-          <div>"This podcast changed my perspective on grace—highly recommend!"</div>
-          <p>Jane Doe, Listener</p>
-        </li>
         <li>
-          <div>"This podcast changed my perspective on grace—highly recommend!"</div>
-          <p>Jane Doe, Listener</p>
-        </li>
-        <li>
-          <div>"Kara’s insights are inspiring and thought-provoking."</div>
-          <p>John Smith, Subscriber</p>
-        </li>
-        <li>
-          <div>"A beautiful blend of faith and life lessons—love this show!"</div>
-          <p>Sarah Johnson, Fan</p>
-        </li>
-      </ul>  
+            <div>"This podcast changed my perspective on grace—highly recommend!"</div>
+            <p>Jane Doe, Listener</p>
+          </li>
+          <li>
+            <div>"This podcast changed my perspective on grace—highly recommend!"</div>
+            <p>Jane Doe, Listener</p>
+          </li>
+          <li>
+            <div>"Kara’s insights are inspiring and thought-provoking."</div>
+            <p>John Smith, Subscriber</p>
+          </li>
+          <li>
+            <div>"A beautiful blend of faith and life lessons—love this show!"</div>
+            <p>Sarah Johnson, Fan</p>
+          </li>
+        </ul>  
+    </div>
   </div>
 </section>
 <section class="guest-contact-section bg-lazy-image">
