Update header styles

--- a/src/_includes/baseheader.njk
+++ b/src/_includes/baseheader.njk
@@ -11,7 +11,7 @@
         </ul>
         <div class="primary-header">
             <div>
-                <p>Serving Virginia, Washington D.C.<br>and Maryland</p>
+                <p>SERVING VIRGINIA, <br>WASHINGTON D.C.<br>AND MARYLAND</p>
             </div>
             <div>
                 <a href="https://karalorynphotography.com" target="_self">
